--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				  <img class="card-img-top" src="foto/adidas.jpg" alt="Card image cap">
 				  <div class="card-body">
 				    <h5 class="card-title">Adidas Running</h5>
-				    <h5 class="card-title">Rp.650.000</h5>
+				    <h5 class="card-title">Rp.450.000</h5>
 				    <a href="Login.html" class="btn btn-primary">Order</a>
 		  		  </div>
 				</div>
@@ -107,10 +107,10 @@
 		<div class="row" align="center">
 		<div class="col-12 col-md-4">
 				<div class="card" style="width: 18rem;">
-				  <img class="card-img-top" src="foto/mercurial.jpg" alt="Card image cap">
+				  <img class="card-img-top" src="foto/basket.jpg" alt="Card image cap">
 				  <div class="card-body">
-				    <h5 class="card-title">Nike Mercurial</h5>
-				    <h5 class="card-title">Rp.900.000</h5>
+				    <h5 class="card-title">Basket Ball</h5>
+				    <h5 class="card-title">Rp.350.000</h5>
 				    <a href="Login.html" class="btn btn-primary">Order</a>
 		  		  </div>
 				</div>
